--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.10"
   }
 }
