--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "mysql": "^2.18.1",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10"
   }
 }
