--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,6 +16,8 @@
     "express-session": "^1.18.2",
     "mysql": "^2.18.1",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
